--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -63,7 +63,7 @@ spec:
       #   - mountPath: /dev/shm
       #     name: dev-shm
   sidecars:
-    - image: selenium/standalone-chrome
+    - image: docker.wdf.sap.corp:50000/selenium/standalone-chrome #selenium/standalone-chrome
       name: selenium
       securityContext:
         privileged: true
