--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -50,7 +50,7 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
-      - name: testServerURL
+      - name: testServerUrl
         type: string
         description: "Link pointing to the deployment"
         scope:
