--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -26,7 +26,7 @@ spec:
       - name: runCommand
         type: string
         description: The command that is executed to start the tests.
-        default: uiveri5 #/home/node/.npm-global/bin/uiveri5
+        default: /home/node/.npm-global/bin/uiveri5
         scope:
           - GENERAL
           - PARAMETERS
