--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -140,6 +140,7 @@ nav:
         - transportRequestRelease:  steps/transportRequestRelease.md
         - transportRequestUploadFile: steps/transportRequestUploadFile.md
         - uiVeri5ExecuteTests: steps/uiVeri5ExecuteTests.md
+        - updateIntegrationArtifactConfiguration: steps/updateIntegrationArtifactConfiguration.md
         - vaultRotateSecretId: steps/vaultRotateSecretId.md
         - whitesourceExecuteScan: steps/whitesourceExecuteScan.md
         - writeTemporaryCredentials: steps/writeTemporaryCredentials.md
