--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -26,3 +26,15 @@ steps:
       - 'CCFenner'
       - 'OliverNocon'
       - 'nevskrem'
+
+# TODO: tmp insert -> remove before merge! 
+  newmanExecute:
+    dockerImage: 'node:lts-stretch'
+    failOnError: true
+    newmanCollection: '**/*.postman_collection.json'
+    newmanEnvironment: ''
+    newmanGlobals: ''
+    newmanInstallCommand: 'npm install newman newman-reporter-html --quiet'
+    newmanRunCommand: ".\\node_modules\\.bin\\newman run {{.NewmanCollection}} --environment {{.Config.NewmanEnvironment}} --globals {{.Config.NewmanGlobals}} --reporters junit,html --reporter-junit-export target/newman/TEST-{{.CollectionDisplayName}}.xml --reporter-html-export target/newman/TEST-{{.CollectionDisplayName}}.html"
+    stashContent:
+      - 'tests'
