--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -35,6 +35,6 @@ steps:
     newmanEnvironment: ''
     newmanGlobals: ''
     newmanInstallCommand: 'npm install newman newman-reporter-html --quiet'
-    newmanRunCommand: ".\\node_modules\\.bin\\newman run {{.NewmanCollection}} --environment {{.Config.NewmanEnvironment}} --globals {{.Config.NewmanGlobals}} --reporters junit,html --reporter-junit-export target/newman/TEST-{{.CollectionDisplayName}}.xml --reporter-html-export target/newman/TEST-{{.CollectionDisplayName}}.html"
-    stashContent:
-      - 'tests'
+    newmanRunCommand: "./node_modules/.bin/newman run {{.NewmanCollection}} --environment {{.Config.NewmanEnvironment}} --globals {{.Config.NewmanGlobals}} --reporters junit,html --reporter-junit-export target/newman/TEST-{{.CollectionDisplayName}}.xml --reporter-html-export target/newman/TEST-{{.CollectionDisplayName}}.html"
+
+
