--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -351,6 +351,7 @@ steps:
     neo:
       size: 'lite'
       credentialsId: 'CI_CREDENTIALS_ID'
+      credentialType: 'UsernamePassword'
       portalLandscape: "cloudnwcportal"
   multicloudDeploy:
     cfTargets: []
