--- a/resources/metadata/whitesource.yaml
+++ b/resources/metadata/whitesource.yaml
@@ -455,6 +455,14 @@ spec:
           - name: custom/whitesourceProjectNames
             type: "[]string"
   containers:
+    - image: buildpack-deps:stretch-curl
+      workingDir: /tmp
+      env: []
+      conditions:
+        - conditionRef: strings-equal
+          params:
+            - name: scanType
+              value: dub
     - image: devxci/mbtci:1.0.14
       workingDir: /home/mta
       env: [ ]
@@ -467,6 +475,22 @@ spec:
           params:
             - name: scanType
               value: mta
+    - image: golang:1
+      workingDir: /go
+      env: []
+      conditions:
+        - conditionRef: strings-equal
+          params:
+            - name: buildTool
+              value: go
+    - image: hseeberger/scala-sbt:8u181_2.12.8_1.2.8
+      workingDir: /tmp
+      env: []
+      conditions:
+        - conditionRef: strings-equal
+          params:
+            - name: scanType
+              value: sbt
     - image: maven:3.5-jdk-8
       workingDir: /tmp
       env: []
@@ -491,27 +515,11 @@ spec:
           params:
             - name: scanType
               value: npm
-    - image: golang:1
-      workingDir: /go
+    - image: python:3.6-stretch
+      workingDir: /tmp
       env: []
       conditions:
         - conditionRef: strings-equal
           params:
             - name: buildTool
-              value: go
-    - image: hseeberger/scala-sbt:8u181_2.12.8_1.2.8
-      workingDir: /tmp
-      env: []
-      conditions:
-        - conditionRef: strings-equal
-          params:
-            - name: scanType
-              value: sbt
-    - image: buildpack-deps:stretch-curl
-      workingDir: /tmp
-      env: []
-      conditions:
-        - conditionRef: strings-equal
-          params:
-            - name: scanType
-              value: dub
+              value: pip
